# adf

./: .gitignore  README.md  conversation.txt
.github/workflows/: build-desktop.yml  ci.yml  deploy-web.yml
backend/: requirements.txt
backend/app/: auth.py  config.py  database.py  main.py  models.py
backend/app/converter/: embeddings.py  enrichment.py  extractor.py  packager.py  structure.py
desktop/: LICENSE  README.md
desktop/frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/frontend/public/: manifest-classic.json  manifest.json
desktop/frontend/src/: global.d.ts  index.tsx
desktop/frontend/src-tauri/: Cargo.toml  Info.plist  dlm-adf.desktop  tauri.conf.json
desktop/frontend/src-tauri/capabilities/: default.json
desktop/frontend/src-tauri/icons/: icon.icns
desktop/frontend/src-tauri/src/: adf_commands.rs  lib.rs
desktop/frontend/src/assets/: material-symbols-icons.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/download/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/viewer/: page.tsx
frontend/src/components/: AgentPanel.tsx  ConversionTimeline.tsx  GraphDetailPanel.tsx  GraphExplorer.tsx  GraphNodeCard.tsx  IntelligenceScoreCard.tsx  PdfViewer.tsx  SemanticViewer.tsx  UploadDropzone.tsx
frontend/src/components/landing/: AdfMindMap.tsx  (+10 more)
frontend/src/lib/: adf-loader.ts  api.ts  auth.ts  store.ts
(+215 files in other folders)
