[package]
name = "dlm-adf"
version = "0.2.0"
description = "DLM ADF — GenTech Document Management"
authors = ["GenTech"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lints.rust]
warnings = "deny"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.1", features = ["devtools"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-shell = "2.3.4"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-http = { version = "2.5.6", features = ["dangerous-settings"] }
tauri-plugin-single-instance = { version = "2.3.7", features = ["deep-link"] }
tauri-plugin-store = "2.4.2"
tauri-plugin-opener = "2.5.3"
tauri-plugin-deep-link = "2.4.6"
tauri-plugin-notification = "2.3.3"
tauri-plugin-window-state = "2.2.1"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
tokio = { version = "1.0", features = ["time", "sync"] }
zip = "2.2"
urlencoding = "2.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-services = "1.0"
